Fix mobile layout issue

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 					<div class="Group">
 						<div class="Connector Vertical" style="top: 7rem; left: 73rem; height: 4rem;"></div>
 						<div class="Connector Horizontal Corner Right Up" style="top: 11rem; left: 66rem; width: 7rem;"></div>
-						<div class="Connector Vertical Corner Right" style="top: 11rem; left: 66rem; height: 15em;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 11rem; left: 66rem; height: 15rem;"></div>
 
 						<div class="Connector Vertical Junction Top" style="top: 11rem; left: 72rem; height: 15rem;"></div>
 						<div class="Connector Vertical Convex Right" style="top: 26rem; left: 72rem;"></div>
