Add further explanation for basic logic gates

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 		<section>
 			<div class="ShrinkWrap">
 				<p>
-					Here are the three basic logic gates.  Click the inputs (square boxes) to see the outputs reflect new values.
+					<a href="http://en.wikipedia.org/wiki/Logic_gate">Logic gates</a> are the basis of all of computing.  They take two binary inputs (0/1 or true/false), and result in a binary output whose value depends on the inputs.  These gates form the building blocks upon which all computers are built.
+				</p>
+				<p>
+					Here are the three basic logic gates: AND (true only when both inputs are true), OR (true when either input is true), and XOR (eXclusive or, true only when exactly one input is true, but not both).  Click the inputs (square boxes) to see the outputs reflect the values.
 				</p>
 				<ul class="CanvasList">
 					<li>
