Add GitHub & Twitter links
TODO: Focus style

--- a/index.html
+++ b/index.html
@@ -568,5 +568,24 @@
 			</div>
 		</section>
 	</nav>
+	<ul class="IconList">
+		<li>
+			<a title="Tweet about Silon" target="_blank"
+			   href="https://twitter.com/intent/tweet?related=Schabse&text=Check+out+Silon+by+%40Schabse+&ndash;+interactive+logic+gates+%26+adders+in+pure+CSS.+http%3A%2F%2Fsilon.slaks.net">
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2000 1625.36">
+					<path fill="#00aced" d="M2000 192.4c-73.6 32.6-152.7 54.7-235.7 64.6 84.7-50.8 149.8-131.2 180.4-227-79.2 47-167 81.2-260.5 99.6C1609.2 49.8 1502.7 0 1384.7 0 1158 0 974.4 183.7 974.4 410.3c0 32.2 3.6 63.5 10.6 93.5-341-17-643.4-180.5-845.8-428.7-35.2 61-55.5 132-55.5 207 0 142.6 72.4 268 182.5 341.7-67.2-2-130.5-20.6-185.8-51.3v5c0 198.8 141.4 364.6 329 402.3-34.3 9.6-70.6 14.6-108 14.6-26.5 0-52.2-2.7-77.2-7.5 52.2 163 203.7 281.8 383.3 285C467 1381 290 1446.8 98 1446.8c-33.2 0-66-2-98-5.7 181.6 117 397.3 185 629 185 754.7 0 1167.5-625 1167.5-1167.2 0-18-.5-35.5-1.2-53 80-58 149.7-130 204.7-212.5" />
+				</svg>
+			</a>
+		</li>
+		<li>
+			<a title="Open source &amp; documentation on GitHub" href="https://github.com/SLaks/Silon" target="_blank">
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="-1163 1657.7 56.69 56.69">
+					<path fill-rule="evenodd" d="M-1134.66 1662.92c-13.6 0-24.63 11.02-24.63 24.63 0 10.88 7.1 20.1 16.9 23.37 1.3.23 1.7-.54 1.7-1.2v-4.57c-6.82 1.5-8.3-2.9-8.3-2.9-1.1-2.86-2.7-3.6-2.7-3.6-2.22-1.54.18-1.5.18-1.5 2.48.16 3.78 2.53 3.78 2.53 2.2 3.76 5.8 2.67 7.2 2.05.2-1.6.85-2.68 1.56-3.3-5.5-.62-11.24-2.73-11.24-12.17 0-2.7.97-4.9 2.54-6.6-.27-.63-1.1-3.14.22-6.53 0 0 2.07-.66 6.78 2.53 1.97-.55 4.08-.82 6.17-.83 2.1 0 4.2.28 6.17.83 4.7-3.2 6.78-2.53 6.78-2.53 1.35 3.4.5 5.9.25 6.52 1.6 1.72 2.54 3.92 2.54 6.6 0 9.47-5.74 11.55-11.22 12.16.9.8 1.7 2.3 1.7 4.6 0 3.3-.04 6-.04 6.8 0 .7.44 1.48 1.7 1.2 9.77-3.22 16.8-12.5 16.8-23.32 0-13.6-11-24.63-24.6-24.63z" clip-rule="evenodd" />
+					<path d="M-1149.96 1698.28c-.06.12-.25.16-.42.07-.18-.08-.28-.24-.22-.37.05-.12.24-.16.42-.07.18.1.28.3.22.4zm1 1.12c-.12.1-.35.05-.5-.12-.17-.17-.2-.4-.08-.5.12-.12.35-.07.5.1.17.17.2.4.08.5zm.96 1.4c-.14.12-.4.02-.54-.2-.15-.22-.15-.48 0-.6.15-.1.4 0 .55.22.2.22.2.48 0 .6zm1.34 1.38c-.14.15-.42.1-.63-.1-.2-.2-.2-.47-.1-.62.2-.15.5-.1.7.1.25.2.3.47.17.62zm1.83.8c-.06.2-.33.28-.6.2-.3-.1-.47-.32-.42-.5.06-.2.34-.3.62-.2.28.08.46.3.4.5zm2.03.14c0 .2-.24.38-.53.38-.3 0-.54-.16-.54-.36 0-.2.23-.37.53-.38.3 0 .53.16.53.36zm1.86-.32c.04.2-.16.4-.45.46-.2.05-.5-.07-.5-.27s.2-.4.5-.5c.3-.1.55 0 .58.2zm0 0" />
+				</svg>
+
+			</a>
+		</li>
+	</ul>
 </body>
 </html>
