Reorganize & decouple LESS files
Will be fully explained in the upcoming readme.

This has no functional changes, but does adjust selector ordering a bit.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 	<title>Silon &ndash; Adders &amp; Logic Gates in Pure CSS</title>
 	<meta name="viewport" content="width=device-width" />
 	<link href="//fonts.googleapis.com/css?family=PT+Sans:400,400italic" rel="stylesheet" type="text/css" />
-	<link href="styles/logic.css" rel="stylesheet" />
-	<link href="styles/chained-adder.css" rel="stylesheet" />
 	<link href="styles/layout.css" rel="stylesheet" />
+	<link href="styles/gate-theme.css" rel="stylesheet" />
+	<link href="styles/basic-gates.css" rel="stylesheet" />
+	<link href="styles/chained-adder.css" rel="stylesheet" />
 
 	<meta name="theme-color" content="#3F51B5">
 	<meta name="msapplication-TileColor" content="#3F51B5">
