Fully implement decimal adder

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href="styles/gate-theme.css" rel="stylesheet" />
 	<link href="styles/basic-gates.css" rel="stylesheet" />
 	<link href="styles/chained-adder.css" rel="stylesheet" />
+	<link href="styles/decimal-adder.css" rel="stylesheet" />
 
 	<meta name="theme-color" content="#3F51B5">
 	<meta name="msapplication-TileColor" content="#3F51B5">
@@ -571,7 +572,38 @@
 			</div>
 		</section>
 		<a href="#decimal-adder" id="decimal-adder" tabindex="5">Decimal Adder</a>
-		<section><div>Coming soon...</div></section>
+		<section>
+			<div class="ShrinkWrap">
+				<p>
+					This has nothing to do with logic gates, but it's still a cool demo.  Click any binary digit toggle between 1 and 0.
+					The sum of the two numbers will be computed &ndash; in pure CSS &ndash; and displayed in decimal form below.
+				</p>
+				<div class="DecimalAdder">
+					<input type="checkbox" id="decimal-adder-a-4" /><div></div>
+					<label for="decimal-adder-a-4"></label>
+					<input type="checkbox" id="decimal-adder-a-3" /><div></div>
+					<label for="decimal-adder-a-3"></label>
+					<input type="checkbox" id="decimal-adder-a-2" /><div></div>
+					<label for="decimal-adder-a-2"></label>
+					<input type="checkbox" id="decimal-adder-a-1" /><div></div>
+					<label for="decimal-adder-a-1"></label>
+					<input type="checkbox" id="decimal-adder-a-0" /><div></div>
+					<label for="decimal-adder-a-0"></label>
+
+					<input type="checkbox" id="decimal-adder-b-4" /><div></div>
+					<label for="decimal-adder-b-4"></label>
+					<input type="checkbox" id="decimal-adder-b-3" /><div></div>
+					<label for="decimal-adder-b-3"></label>
+					<input type="checkbox" id="decimal-adder-b-2" /><div></div>
+					<label for="decimal-adder-b-2"></label>
+					<input type="checkbox" id="decimal-adder-b-1" /><div></div>
+					<label for="decimal-adder-b-1"></label>
+					<input type="checkbox" id="decimal-adder-b-0" /><div></div>
+					<label for="decimal-adder-b-0"></label>
+
+				</div>
+			</div>
+		</section>
 		<section class="DefaultTab">
 			<div class="ShrinkWrap">
 				<h1>Silon</h1>
