--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
 	<link rel="icon" type="image/png" href="/icons/favicon-16x16.png" sizes="16x16">
 	<link rel="manifest" href="/icons/manifest.json">
 	<meta name="msapplication-TileImage" content="/icons/mstile-144x144.png">
+
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-3656687-6', 'auto');
+		ga('send', 'pageview');
+	</script>
 </head>
 <body>
 	<nav>
