Add more-prominent Readme link

--- a/index.html
+++ b/index.html
@@ -625,6 +625,7 @@
 					as well as <a href="http://en.wikipedia.org/wiki/Adder_%28electronics%29">half- and full- adders</a>.
 				</p>
 				<p>To get started, click a tab above.</p>
+				<p>To see how it works, see the <a href="https://github.com/SLaks/Silon#readme">readme</a> on GitHub.</p>
 			</div>
 		</section>
 	</nav>
